--- a/public/accounts.html
+++ b/public/accounts.html
@@ -36,14 +36,29 @@
                 <li><a href="profile.html">Profile</a></li>
                 <li><a href="#">Facebook Profile</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="logout.html">Logout</a></li>
               </ul>
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
-    </nav>  
+    </nav>
     <div class="container-fluid">
+      <h3>Accounts</h3>
+      <table class="table table-bordered table-striped">
+        <thead>
+          <tr>
+            <th>Date</th>
+            <th>Description</th>
+            <th>Amount</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td colspan="3">There are no transactions.</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </body>
 </html>
