--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
       <div style="margin-top:50px;" class="row">
         <div class="col-md-offset-4 col-md-4">
           <div class="panel panel-default">
+            <div class="panel-heading">
+              <h2 class="panel-title">SJI Batch '98 Login</h2>
+            </div>
             <div class="panel-body">
               <form method="post" action="roster.html">
                 <div class="form-group">
