--- a/public/logout.html
+++ b/public/logout.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>SJI '98 | Dashboard</title>
+    <title>SJI '98 | Logout</title>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -22,28 +22,11 @@
           </button>
           <a class="navbar-brand" href="dashboard.html">SJI Batch '98</a>
         </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li><a href="roster.html">Roster <span class="sr-only">(current)</span></a></li>
-            <li><a href="accounts.html">Accounts</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Username <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="profile.html">Profile</a></li>
-                <li><a href="#">Facebook Profile</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="logout.html">Logout</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
-    </nav>  
+    </nav>
     <div class="container-fluid">
+      <h2>Ok...</h2>
+      <p>You have successfully logged out. <a href="/index.html">Log back in!</a></p>
     </div>
   </body>
 </html>
