--- a/public/profile.html
+++ b/public/profile.html
@@ -36,14 +36,133 @@
                 <li class="active"><a href="profile.html">Profile</a></li>
                 <li><a href="#">Facebook Profile</a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="logout.html">Logout</a></li>
               </ul>
             </li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
-    </nav>  
-    <div class="container-fluid">
+    </nav>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <img src="/assets/images/placeholder.png" class="img-thumbnail" style="width:100%" />
+          <hr/>
+          <form method="post" action="pay-homecoming.html">
+            <div class="input-group">
+              <span class="input-group-addon">&#8369;</span>
+              <input type="number" name="payment" class="form-control input-lg" value="12500" placeholder="Amount" />
+            </div>
+            <br/>
+            <input type="submit" class="btn btn-default btn-lg btn-block" value="Pay Homecoming"/>
+          </form>
+        </div>
+        <div class="col-md-9">
+          <ul id="profile-tabs" class="nav nav-tabs">
+            <li class="active"><a href="#info">Info</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#profession">Profession</a></li>
+            <li><a href="#transactions">Transactions</a></li>
+          </ul>
+          <div class="tab-content">
+            <div id="info" class="tab-pane active">
+              <h3>Info</h3>
+              <form method="post" action="">
+                <div class="form-group">
+                  <label for="firstname">First Name</label>
+                  <input type="text" id="firstname" name="firstname" class="form-control" value="" placeholder="First Name" />
+                </div>
+                <div class="form-group">
+                  <label for="lastname">Last Name</label>
+                  <input type="text" id="lastname" name="lastname" class="form-control" value="" placeholder="Last Name" />
+                </div>
+                <div class="form-group">
+                  <label for="birthdate">Birthdate</label>
+                  <input type="date" id="birthdate" name="birthdate" class="form-control" value="" placeholder="Birthdate" />
+                </div>
+                <hr/>
+                <div class="form-group">
+                  <label for="address1">Address</label>
+                  <input type="text" id="address1" name="address1" class="form-control" value="" placeholder="Address 1" />
+                </div>
+                <div class="form-group">
+                  <input type="text" id="address2" name="address2" class="form-control" value="" placeholder="Address 2" />
+                </div>
+                <div class="row">
+                  <div class="col-md-5">
+                    <div class="form-group">
+                      <input type="text" id="city" name="city" class="form-control" value="" placeholder="City" />
+                    </div>
+                  </div>
+                  <div class="col-md-3">
+                    <div class="form-group">
+                      <input type="text" id="state" name="state" class="form-control" value="" placeholder="State" />
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="form-group">
+                      <input type="text" id="zip" name="zip" class="form-control" value="" placeholder="Zip Code" />
+                    </div>
+                  </div>
+                </div>
+                <input type="submit" class="btn btn-primary btn-lg" name="save" value="Save Info" />
+              </form>
+            </div>
+            <div id="about" class="tab-pane">
+              <h3>About</h3>
+              <p>Write something about this person, or write something about yourself.</p>
+              <form method="post">
+                <textarea class="form-control" name="about" rows="10" placeholder="About"></textarea>
+                <br/>
+                <input type="submit" class="btn btn-primary btn-lg" name="Submit" value="Save" />
+              </form>
+            </div>
+            <div id="profession" class="tab-pane">
+              <h3>Profession</h3>
+              <div class="row">
+                <div class="col-md-8">
+                  <select id="selected-profile" name="" class="form-control">
+                    <option>Linkedin</option>
+                    <option>Facebook</option>
+                    <option>Google+</option>
+                  </select>
+                </div>
+                <div class="col-md-4">
+                  <button id="sync-profession" class="btn btn-primary">Sync Profession Info</button>
+                </div>
+              </div>
+            </div>
+            <div id="transactions" class="tab-pane">
+              <h3>Transactions</h3>
+              <table class="table table-bordered table-striped">
+                <thead>
+                  <tr>
+                    <th>Date</th>
+                    <th>Description</th>
+                    <th>Amount</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td colspan="3">There are no transactions.</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>            
+          </div>
+        </div>
+      </div>
     </div>
   </body>
+  <script type="text/javascript">
+    $(function() {
+      'use strict';
+
+      $('#profile-tabs a').click(function (e) {
+        e.preventDefault()
+        $(this).tab('show')
+      });
+
+    });
+  </script>
 </html>
