--- a/public/roster.html
+++ b/public/roster.html
@@ -42,8 +42,54 @@
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
-    </nav>  
+    </nav>
     <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="form-group">
+            <b class="pull-right">Members:</b>
+            <label for="search">Search</label>
+            <input type="text" id="search" class="form-control" name="search" value="" placeholder="Search" />
+          </div>
+        </div>
+        <div class="col-md-offset-4 col-md-4">
+          <nav aria-label="Page navigation">
+            <ul class="pagination pull-right">
+              <li>
+                <a href="#" aria-label="Previous">
+                  <span aria-hidden="true">&laquo;</span>
+                </a>
+              </li>
+              <li><a href="#">1</a></li>
+              <li><a href="#">2</a></li>
+              <li><a href="#">3</a></li>
+              <li><a href="#">4</a></li>
+              <li><a href="#">5</a></li>
+              <li>
+                <a href="#" aria-label="Next">
+                  <span aria-hidden="true">&raquo;</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      <table class="table table-hover table-bordered">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Hometown</th>
+            <th>Birthdate</th>
+            <th>Profession</th>
+            <th>Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td colspan="5">There are no members.</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </body>
 </html>
