--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,19 @@
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
+    <script>
+      // Initialize Firebase
+      // TODO: Replace with your project's customized code snippet
+      var config = {
+        apiKey: "AIzaSyC-H_ws7WPkLU9ax6Ge7SKFgh1pil4vCD8",
+        authDomain: "sjibatch98.firebaseapp.com",
+        databaseURL: "https://sjibatch98.firebaseio.com",
+        storageBucket: "sjibatch98.appspot.com",
+        messagingSenderId: "33808654629",
+      };
+      firebase.initializeApp(config);
+    </script>
     <style media="screen">
     </style>
   </head>
@@ -18,16 +31,17 @@
               <h2 class="panel-title">SJI Batch '98 Login</h2>
             </div>
             <div class="panel-body">
-              <form method="post" action="roster.html">
+              <form id="loginForm" method="post" action="roster.html">
                 <div class="form-group">
                   <label for="email">Email</label>
-                  <input type="text" class="form-control" name="email" value="" placeholder="Email"/>
+                  <input type="text" id="email" class="form-control" name="email" value="" placeholder="Email"/>
                 </div>
                 <div class="form-group">
                   <label for="password">Password</label>
-                  <input type="text" class="form-control" name="password" value="" placeholder="Password"/>
+                  <input type="password" id="password" class="form-control" name="password" value="" placeholder="Password"/>
                 </div>
                 <input type="submit" class="btn btn-primary" name="submit" value="Login" />
+                <a href="#facebook" class="btn btn-default">Facebook Login</a>
               </form>
             </div>
           </div>
@@ -35,4 +49,40 @@
       </div>
     </div>
   </body>
+  <script type="text/javascript">
+  var emailLogin = function() {
+    var email = $('#email').val(),
+        password = $('#password').val();
+
+    // console.log(email,password);
+    firebase.auth().signInWithEmailAndPassword(email, password).catch(function(error) {
+      var errorCode = error.code;
+      var errorMessage = error.message;
+      // console.log(errorCode,errorMessage);
+    });
+  }
+
+  var checkAuth = function() {
+    firebase.auth().onAuthStateChanged(function(user) {
+      if (user) { // User is signed in.
+        // console.log(user);
+        window.location.href='/dashboard.html';
+      } else { // No user is signed in.
+        console.log('No user signed in.');
+      }
+    });
+  }
+
+  $(document).ready(function() {
+    'use strict';
+
+    $('#loginForm').submit(function(e) {
+      e.preventDefault();
+      console.log('Email login...');
+      emailLogin();
+    });
+
+    checkAuth();
+  });
+  </script>
 </html>
