feat: Add Facebook login.

--- a/public/accounts.html
+++ b/public/accounts.html
@@ -78,7 +78,7 @@
   var checkAuth = function() {
     firebase.auth().onAuthStateChanged(function(user) {
       if (user) { // User is signed in.
-        // console.log(user);
+        console.log(user);
       } else { // No user is signed in.
         console.log('No user signed in.');
         window.location.href='/';
