--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -9,7 +9,6 @@
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script>
       // Initialize Firebase
-      // TODO: Replace with your project's customized code snippet
       var config = {
         apiKey: "AIzaSyC-H_ws7WPkLU9ax6Ge7SKFgh1pil4vCD8",
         authDomain: "sjibatch98.firebaseapp.com",
@@ -44,10 +43,10 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Username <span class="caret"></span></a>
+              <a href="#" id="username" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Username <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="profile.html">Profile</a></li>
-                <li><a href="#">Facebook Profile</a></li>
+                <li><a href="#facebook-profile" id="facebook-profile" target="_blank">Facebook Profile</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#logout" id="signOut">Logout</a></li>
               </ul>
@@ -55,32 +54,12 @@
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
-    </nav>  
+    </nav>
     <div class="container-fluid">
     </div>
   </body>
+  <script type="text/javascript" src="/assets/js/scripts.js"></script>
   <script type="text/javascript">
-  var checkAuth = function() {
-    firebase.auth().onAuthStateChanged(function(user) {
-      if (user) { // User is signed in.
-        console.log(user);
-      } else { // No user is signed in.
-        console.log('No user signed in.');
-        window.location.href='/';
-      }
-    });
-  }
-
-  var signOut = function() {
-    firebase.auth().signOut().then(function() {
-      // Sign-out successful.
-      window.location.href='/logout.html';
-    }, function(error) {
-      // An error happened.
-      console.log('Error:',error);
-    });
-  }
-
   $(document).ready(function() {
     'use strict';
 
