--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script>
       // Initialize Firebase
-      // TODO: Replace with your project's customized code snippet
       var config = {
         apiKey: "AIzaSyC-H_ws7WPkLU9ax6Ge7SKFgh1pil4vCD8",
         authDomain: "sjibatch98.firebaseapp.com",
@@ -31,6 +30,9 @@
               <h2 class="panel-title">SJI Batch '98 Login</h2>
             </div>
             <div class="panel-body">
+              <div id="status-message" style="display:none;">
+              </div>
+              <!--
               <form id="loginForm" method="post" action="roster.html">
                 <div class="form-group">
                   <label for="email">Email</label>
@@ -41,8 +43,13 @@
                   <input type="password" id="password" class="form-control" name="password" value="" placeholder="Password"/>
                 </div>
                 <input type="submit" class="btn btn-primary" name="submit" value="Login" />
-                <a href="#facebook" id="facebookLogin" class="btn btn-default">Facebook Login</a>
               </form>
+              -->
+              <div style="text-align:center;">
+                <img src="/assets/images/sji-logo.jpg" class="img-thumbnail"/>
+                <hr/>
+                <a href="#facebook" id="facebookLogin" class="btn btn-primary btn-lg">Facebook Login</a>
+              </div>
             </div>
           </div>
         </div>
@@ -50,14 +57,18 @@
     </div>
   </body>
   <script type="text/javascript">
-  var fbProvider = new firebase.auth.FacebookAuthProvider();
-  fbProvider.addScope('user_birthday,email,public_profile,user_photos,user_education_history,user_about_me,user_hometown');
+  var provider = new firebase.auth.FacebookAuthProvider();
+  provider.addScope('user_birthday,email,user_education_history,user_about_me,user_hometown');
 
+// id,name,birthday,education,hometown,location,about,first_name,last_name
   var facebookLogin = function() {
-    firebase.auth().signInWithPopup(fbProvider).then(function(result) {
+    firebase.auth().signInWithPopup(provider).then(function(result) {
       // This gives you a Facebook Access Token. You can use it to access the Facebook API.
       var token = result.credential.accessToken;
-      var user = result.user;
+      var user = JSON.parse(JSON.stringify(result));
+      // TODO: Save the access_token in a cookie to retrieve the scope of the user.
+      console.log(token);
+      console.log(user.current);
       console.log('Successfully logged in with Facebook.');
       window.location.href='/dashboard.html';
     }).catch(function(error) {
@@ -66,6 +77,13 @@
       var email = error.email;
       var credential = error.credential;
       console.log('Error: ',errorCode,errorMessage);
+      var statusMessage = "<div class='alert alert-error'>";
+      statusMessage+= 'button type="button" class="close" data-dismiss="alert" aria-label="Close">';
+      statusMessage+= '<span aria-hidden="true">&times;</span>';
+      statusMessage+= '</button>';
+      statusMessage+= '"Error: '+ ' ' + errorCode+ ' ' + errorMessage;
+      statusMessage+= '</div>';
+      $('#status-message').html(statusMessage);
     });
   };
 
@@ -85,7 +103,7 @@
     firebase.auth().onAuthStateChanged(function(user) {
       if (user) { // User is signed in.
         // console.log(user);
-        window.location.href='/dashboard.html';
+        window.location.href='/profile.html';
       } else { // No user is signed in.
         console.log('No user signed in.');
       }
