--- a/public/roster.html
+++ b/public/roster.html
@@ -105,6 +105,7 @@
     </div><!-- #container-fluid -->
   </body>
   <script type="text/javascript" src="/assets/js/scripts.js"></script>
+  <script type="text/javascript" src="/assets/js/cookie.js"></script>
   <script type="text/javascript">
   $(document).ready(function() {
     'use strict';
