--- a/public/accounts.html
+++ b/public/accounts.html
@@ -74,6 +74,7 @@
     </div>
   </body>
   <script type="text/javascript" src="/assets/js/scripts.js"></script>
+  <script type="text/javascript" src="/assets/js/cookie.js"></script>
   <script type="text/javascript">
   $(document).ready(function() {
     'use strict';
