--- a/public/profile.html
+++ b/public/profile.html
@@ -58,7 +58,7 @@
     </nav>
     <div class="container">
       <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-2">
           <img id="default-image" src="/assets/images/placeholder.png" class="img-thumbnail" style="width:100%" />
           <hr/>
           <form method="post" action="pay-homecoming.html">
@@ -67,81 +67,68 @@
               <input type="number" name="payment" class="form-control input-lg" value="12500" placeholder="Amount" />
             </div>
             <br/>
-            <input type="submit" class="btn btn-success btn-lg btn-block" value="Pay Homecoming"/>
+            <input type="submit" class="btn btn-success btn-block" value="Pay Homecoming"/>
           </form>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-10">
           <ul id="profile-tabs" class="nav nav-tabs">
-            <li class="active"><a href="#info">Info</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#profession">Profession</a></li>
-            <li><a href="#transactions">Transactions</a></li>
+            <li class="active"><a href="#info-tab">Info</a></li>
+            <li><a href="#about-tab">About</a></li>
+            <li><a href="#profession-tab">Profession</a></li>
+            <li><a href="#transactions-tab">Transactions</a></li>
           </ul>
           <div class="tab-content">
-            <div id="info" class="tab-pane active">
+            <div id="info-tab" class="tab-pane active">
               <h3>Info</h3>
-              <form method="post" action="">
-                <div class="form-group">
-                  <label for="displayName">Full Name</label>
-                  <input type="text" id="displayName" name="displayName" class="form-control" value="" placeholder="Full Name" disabled/>
-                </div>
-                <div class="row">
-                  <div class="col-md-4">
-                    <div class="form-group">
-                      <label for="birthdate">Birthdate</label>
-                      <input type="date" id="birthdate" name="birthdate" class="form-control" value="" placeholder="Birthdate" />
-                    </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="form-group">
-                      <label for="phone">Phone</label>
-                      <input type="text" id="phone" name="phone" class="form-control" value="" placeholder="Phone" />
-                    </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="form-group">
-                      <label for="email">Email</label>
-                      <input type="text" id="email" name="email" class="form-control" value="" placeholder="Email" disabled/>
-                    </div>
+              <div class="form-group">
+                <label for="displayName">Full Name</label>
+                <input type="text" id="displayName" name="displayName" class="form-control" value="" placeholder="Full Name" disabled/>
+              </div>
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="form-group">
+                    <label for="birthdate">Birthdate</label>
+                    <input type="date" id="birthdate" name="birthdate" class="form-control" value="" placeholder="Birthdate" />
                   </div>
                 </div>
-                <div class="form-group">
-                  <label for="address1">Address</label>
-                  <input type="text" id="address1" name="address1" class="form-control" value="" placeholder="Address 1" />
-                </div>
-                <div class="form-group">
-                  <input type="text" id="address2" name="address2" class="form-control" value="" placeholder="Address 2" />
-                </div>
-                <div class="row">
-                  <div class="col-md-5">
-                    <div class="form-group">
-                      <input type="text" id="city" name="city" class="form-control" value="" placeholder="City" />
-                    </div>
-                  </div>
-                  <div class="col-md-3">
-                    <div class="form-group">
-                      <input type="text" id="state" name="state" class="form-control" value="" placeholder="State" />
-                    </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="form-group">
-                      <input type="text" id="zip" name="zip" class="form-control" value="" placeholder="Zip Code" />
-                    </div>
+                <div class="col-md-4">
+                  <div class="form-group">
+                    <label for="phone">Phone</label>
+                    <input type="text" id="phone" name="phone" class="form-control" value="" placeholder="Phone" />
                   </div>
                 </div>
-                <input type="submit" class="btn btn-primary btn-lg" name="save" value="Save Info" />
-              </form>
+                <div class="col-md-4">
+                  <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="text" id="email" name="email" class="form-control" value="" placeholder="Email" disabled/>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="hometown">Hometown</label>
+                    <input type="text" id="hometown" name="hometown" class="form-control" value="" placeholder="Hometown" />
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label for="location">Location</label>
+                    <input type="text" id="location" name="location" class="form-control" value="" placeholder="Location" />
+                  </div>
+                </div>
+              </div>
             </div>
-            <div id="about" class="tab-pane">
+            <div id="about-tab" class="tab-pane">
               <h3>About</h3>
               <p>Write something about this person, or write something about yourself.</p>
               <form method="post">
-                <textarea class="form-control" name="about" rows="10" placeholder="About"></textarea>
+                <textarea class="form-control" id="about" name="about" rows="10" placeholder="About"></textarea>
                 <br/>
                 <input type="submit" class="btn btn-primary btn-lg" name="Submit" value="Save" />
               </form>
             </div>
-            <div id="profession" class="tab-pane">
+            <div id="profession-tab" class="tab-pane">
               <h3>Profession</h3>
               <div class="row">
                 <div class="col-md-8">
@@ -156,7 +143,7 @@
                 </div>
               </div>
             </div>
-            <div id="transactions" class="tab-pane">
+            <div id="transactions-tab" class="tab-pane">
               <h3>Transactions</h3>
               <table class="table table-bordered table-striped">
                 <thead>
@@ -179,6 +166,7 @@
     </div>
   </body>
   <script type="text/javascript" src="/assets/js/scripts.js"></script>
+  <script type="text/javascript" src="/assets/js/cookie.js"></script>
   <script type="text/javascript">
   $(document).ready(function() {
     'use strict';
