--- a/public/profile.html
+++ b/public/profile.html
@@ -79,28 +79,18 @@
           </ul>
           <div class="tab-content">
             <div id="info-tab" class="tab-pane active">
-              <h3>Info</h3>
-              <div class="form-group">
-                <label for="displayName">Full Name</label>
-                <input type="text" id="displayName" name="displayName" class="form-control" value="" placeholder="Full Name" disabled/>
-              </div>
+              <h3 id="fullName">Info</h3>
               <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6">
                   <div class="form-group">
                     <label for="birthdate">Birthdate</label>
-                    <input type="date" id="birthdate" name="birthdate" class="form-control" value="" placeholder="Birthdate" />
+                    <p id="birthdate" class="form-control-static"></p>
                   </div>
                 </div>
-                <div class="col-md-4">
-                  <div class="form-group">
-                    <label for="phone">Phone</label>
-                    <input type="text" id="phone" name="phone" class="form-control" value="" placeholder="Phone" />
-                  </div>
-                </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                   <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="text" id="email" name="email" class="form-control" value="" placeholder="Email" disabled/>
+                    <p id="email" class="form-control-static"></p>
                   </div>
                 </div>
               </div>
@@ -108,13 +98,13 @@
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="hometown">Hometown</label>
-                    <input type="text" id="hometown" name="hometown" class="form-control" value="" placeholder="Hometown" />
+                    <p id="hometown" class="form-control-static"></p>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="form-group">
                     <label for="location">Location</label>
-                    <input type="text" id="location" name="location" class="form-control" value="" placeholder="Location" />
+                    <p id="location" class="form-control-static"></p>
                   </div>
                 </div>
               </div>
