feat: Add data in professions tab.

--- a/public/profile.html
+++ b/public/profile.html
@@ -120,17 +120,8 @@
             </div>
             <div id="profession-tab" class="tab-pane">
               <h3>Profession</h3>
-              <div class="row">
-                <div class="col-md-8">
-                  <select id="selected-profile" name="" class="form-control">
-                    <option>Linkedin</option>
-                    <option>Facebook</option>
-                    <option>Google+</option>
-                  </select>
-                </div>
-                <div class="col-md-4">
-                  <button id="sync-profession" class="btn btn-primary">Sync Profession Info</button>
-                </div>
+              <hr/>
+              <div id="professions">
               </div>
             </div>
             <div id="transactions-tab" class="tab-pane">
