feat: Display members list.

--- a/public/roster.html
+++ b/public/roster.html
@@ -86,14 +86,14 @@
           </nav>
         </div>
       </div>
-      <table class="table table-hover table-bordered">
+      <table id="members-table" class="table table-hover table-bordered">
         <thead>
           <tr>
             <th>Name</th>
             <th>Hometown</th>
-            <th>Birthdate</th>
+            <th>Location</th>
+            <th>Birthday</th>
             <th>Profession</th>
-            <th>Status</th>
           </tr>
         </thead>
         <tbody>
