--- a/public/profile.html
+++ b/public/profile.html
@@ -84,7 +84,7 @@
                 <div class="col-md-5">
                   <div class="form-horizontal">
                     <div class="form-group">
-                      <label for="birthdate" class="col-md-3 control-label">Birthdate</label>
+                      <label for="birthdate" class="col-md-3 control-label">Birthday</label>
                       <div class="col-md-9">
                         <p id="birthdate" class="form-control-static"></p>
                       </div>
