--- a/public/profile.html
+++ b/public/profile.html
@@ -128,21 +128,23 @@
               </div>
             </div>
             <div id="transactions-tab" class="tab-pane">
-              <h3>Transactions</h3>
-              <table class="table table-bordered table-striped">
-                <thead>
-                  <tr>
-                    <th>Date</th>
-                    <th>Description</th>
-                    <th>Amount</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td colspan="3">There are no transactions.</td>
-                  </tr>
-                </tbody>
-              </table>
+              <div id="transactions">
+                <h3>Transactions</h3>
+                <table id="transactions-table" class="table table-bordered table-striped">
+                  <thead>
+                    <tr>
+                      <th>Date</th>
+                      <th>Description</th>
+                      <th>Amount</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td colspan="3">There are no transactions.</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
             </div>            
           </div>
         </div>
