feat:Get profile from Firebase if userId is present.

--- a/public/member.html
+++ b/public/member.html
@@ -71,7 +71,7 @@
           </form>
         </div>
         <div class="col-md-10">
-          <h3 id="fullName">Info <a href="/roster.html" class="btn btn-default">Go Back</a></h3>
+          <h3 id="fullName">Info</h3>
           <ul id="profile-tabs" class="nav nav-tabs">
             <li class="active"><a href="#info-tab">Info</a></li>
             <li><a href="#profession-tab">Profession</a></li>
