feat: Add email in roster

--- a/public/roster.html
+++ b/public/roster.html
@@ -92,6 +92,7 @@
         <thead>
           <tr>
             <th>Name</th>
+            <th>Email</th>
             <th>Hometown</th>
             <th>Location</th>
             <th>Birthday</th>
@@ -100,7 +101,7 @@
         </thead>
         <tbody>
           <tr>
-            <td colspan="5">There are no members.</td>
+            <td colspan="6">There are no members.</td>
           </tr>
         </tbody>
       </table>
