feat: Add members count in roster page.

--- a/public/roster.html
+++ b/public/roster.html
@@ -59,7 +59,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="form-group">
-            <b class="pull-right">Members:</b>
+            <b class="pull-right">Members <span id="membersCount" class="badge"></span></b>
             <label for="search">Search</label>
             <input type="text" id="search" class="form-control" name="search" value="" placeholder="Search" />
           </div>
