--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       // Initialize Firebase
       var config = {
         apiKey: "AIzaSyC-H_ws7WPkLU9ax6Ge7SKFgh1pil4vCD8",
-        authDomain: "sjibatch98.firebaseapp.com",
+        authDomain: "sji.asteriainteractive.com",
         databaseURL: "https://sjibatch98.firebaseio.com",
         storageBucket: "sjibatch98.appspot.com",
         messagingSenderId: "33808654629",
@@ -60,7 +60,7 @@
   <script type="text/javascript" src="/assets/js/cookie.js"></script>
   <script type="text/javascript">
   var provider = new firebase.auth.FacebookAuthProvider();
-  provider.addScope('user_birthday,email,user_education_history,user_work_history,user_about_me,user_hometown,user_location');
+  provider.addScope('public_profile,user_photos,user_birthday,email,user_education_history,user_work_history,user_about_me,user_hometown,user_location');
 
   var facebookLogin = function() {
     firebase.auth().signInWithPopup(provider).then(function(result) {
