--- a/public/roster.html
+++ b/public/roster.html
@@ -11,7 +11,7 @@
       // Initialize Firebase
       var config = {
         apiKey: "AIzaSyC-H_ws7WPkLU9ax6Ge7SKFgh1pil4vCD8",
-        authDomain: "sjibatch98.firebaseapp.com",
+        authDomain: "sji.asteriainteractive.com",
         databaseURL: "https://sjibatch98.firebaseio.com",
         storageBucket: "sjibatch98.appspot.com",
         messagingSenderId: "33808654629",
