chore: Separated scripts in controllers

--- a/public/member.html
+++ b/public/member.html
@@ -9,7 +9,7 @@
     <script src="https://www.gstatic.com/firebasejs/3.6.2/firebase.js"></script>
     <script>
       // Initialize Firebase
-      // TODO: Replace with your project's customized code snippet
+      // Replace with your project's customized code snippet
       var config = {
         apiKey: "AIzaSyC-H_ws7WPkLU9ax6Ge7SKFgh1pil4vCD8",
         authDomain: "sji.asteriainteractive.com",
@@ -179,8 +179,8 @@
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->    
   </body>
-  <script type="text/javascript" src="/assets/js/scripts.js"></script>
   <script type="text/javascript" src="/assets/js/cookie.js"></script>
+  <script type="text/javascript" src="/assets/js/scripts.js"></script>
   <script type="text/javascript">
   $(document).ready(function() {
     'use strict';
