feat: Added members route

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,9 @@
             .when('/',{
               templateUrl: 'templates/login.html'
             })
+            .when('/members',{
+              templateUrl: 'templates/members.html'
+            })
             .when('/accounts',{
               templateUrl: 'templates/accounts.html'
             })
