feat: Created add-members page

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,9 @@
             .when('/members',{
               templateUrl: 'templates/members.html'
             })
+            .when('/members/add',{
+              templateUrl: 'templates/members-add.html'
+            })
             .when('/accounts',{
               templateUrl: 'templates/accounts.html'
             })
